--- a/entreprise_tp/entreprise.css
+++ b/entreprise_tp/entreprise.css
@@ -11,7 +11,6 @@ nav{
 	background-color: rgb(112, 183, 239) ;
 	margin-top:0px;
 	margin-bottom:0px;
-
 }
 
 fieldset {
@@ -67,4 +66,13 @@ h3{
 img{
 	width: 50px;
 	height: 50px;
+}
+
+footer{
+	border: 2px solid #ff7700;
+	border-radius: 10px;
+	background-color:#2196F3;
+	margin-bottom:15px;
+	color: white;
+	font-size: 200%;
 }
